@@ -79,7 +79,6 @@ public:
   // Methodes specifiques :
   //
   Postraitement();
-  void lire_fichier(const Nom& nom_fichier);
 
   inline const Sondes& les_sondes() const { return les_sondes_; }
   inline Sondes& les_sondes() { return les_sondes_; }
@@ -222,6 +221,7 @@ protected:
 
 private :
 };
+
 
 inline int Postraitement::lpost(double temps_courant, double dt_post) const
 {
