@@ -1,0 +1,6 @@
+t_deb 0.
+t_fin 10.
+moyenne vitesse
+ecart_type vitesse
+correlation vitesse pression
+
