@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
 --------------------------------------------------------------------------------------------------
+XX/04/24 (TRUST) New Keywords : 'Fields_file', 'Statistics_file', 'Serial_statistics_file', 'Mobile_Probes_file', 'Int_Probes_file' and 'Int_Arrays_file'
+                                can now be used to define post-processing blocs in an annex datafile. See 'postpro_annex_file' test case
 12/04/24 (TRUST) Keyword      : .xyz file may be written in ASCII format with "EcritureLectureSpecial EcrFicPartage" keyword. Fields are written in "x(i) y(i) z(i) value(i)" format
 10/04/24 (TRUST) Fix          : Element-wall distance is now correctly calculated in the diffusion-operator for multi-component cases
 10/04/24 (TRUST) New feature  : Add series of problems XXX_List_Concenration & XXX_List_Concenration_Turbulent that can be used to dolve a list of N concentration equations. Possible to define different diffusion coefficients for each cloned equation (which is not the case of list_scalaire_passif problem !!!)
